syntax = "proto3";

package ithos;

// Metadata associated with an ithos entry
message Metadata {
  bytes  created_id = 1;
  bytes  updated_id = 2;
  uint64 created_at = 3;
  uint64 updated_at = 4;
  uint64 version    = 5;
}
